added authentication & authorization

--- a/SuggestionAppUI/appsettings.json
+++ b/SuggestionAppUI/appsettings.json
@@ -8,6 +8,15 @@
   "AllowedHosts": "*",
   "DatabaseName": "suggestionapp",
   "ConnectionStrings": {
-    "MongoDB": "<ConnectionString is in the secrets.json>"
+    "MongoDB": "<in the secrets.json>"
+  },
+  "AzureAdB2C": {
+    "Instance": "<in the secrets.json>",
+    "ClientId": "<in the secrets.json>",
+    "CallbackPath": "<in the secrets.json>",
+    "Domain": "<in the secrets.json>",
+    "SignUpSignInPolicyId": "<in the secrets.json>",
+    "ResetPasswordPolicyId": "<in the secrets.json>",
+    "EditProfilePolicyId": "<in the secrets.json>"
   }
 }
